fix: navbar jump problem

--- a/serve/src/style.scss
+++ b/serve/src/style.scss
@@ -6,6 +6,10 @@
 	}
 }
 
+img {
+	-webkit-user-drag: none;
+}
+
 html,
 body {
 	height: 100%;
